# data-miner

./: .env.example  .gitignore  .mailmap  404.html  Dockerfile  README.md  check_venv_links.sh  client.py  docker-compose-0ld.yaml  docker-compose.master.yml  docker-compose.swarm.yml  docker-compose.worker.yml  fabfile.py  generate_compose.py  index.html  mkdocs.yml  proper-growing-falcon.md  pyproject.toml  silly-growing-falcon.md  sitemap.xml
.devcontainer/: .gitignore  compose.nvpytorch.yml  container_gen.sh  dev_entrypoint.sh  devcontainer.json  env_template.txt  nvidia_pytorch.Dockerfile
.github/: copilot-instructions.md
.github/workflows/: deploy-docs.yml
annotation-validator/: .env.example  README.md  docker-compose-vllm.yml  filter_inner_bboxes.py  requirements.txt  validator.py
data_miner/: __init__.py  aa_v3_migration_plan.md  aa_v3_migration_plan_v2.md  cli.py  logging.py
detection_metrics/: README.md  detection_dataset_formats.md  example_config.yaml  pyproject.toml
detection_metrics/detection_metrics/: __init__.py  cache.py  cli.py  data_loader.py  logging.py  report.py  utils.py  visualizer.py
detection_metrics/detection_metrics/configs/: __init__.py  config.py  default.yaml
detection_metrics/detection_metrics/inference/: __init__.py  base.py
detection_metrics/src/detection_metrics/: __init__.py  cli.py  convert_dataset.py  converter.py  data_loader.py  dataset_analysis.py  evaluator.py  pipeline.py  remote_view.py  visualizer.py
detection_metrics/src/detection_metrics/configs/: __init__.py  config.py  default.yaml
diagrams/: data_miner_dataflow.drawio
docker_configs/: Dockerfile  cluster.yaml  docker-compose.seaweed.yml  docker-compose.swarm.yml  worker.yaml
docs/: CODE_WALKTHROUGH.md  doors_order.json  index.md  parallel_pipeline_design.md.resolved
fabric_Setup/: fabfile.py  generate_compose.py  seaweedfs_setup_guide.md  swarm_experiment_results.md
k3s_setup/: DATA_MINER_K8S_MIGRATION_PLAN.md  Dockerfile  Dockerfile.base  Dockerfile.gpu  K3S_DEPLOYMENT_STATUS.md  cluster.py  cluster_config.yaml  data_miner_prep.py  deploy_manifests.sh  docker_build.py  generate_manifests.py  inventory.py  k3s.py  orchestrate.py  provision.py  seaweedfs.yaml  seaweedfs_prep.py  setup_ssh_keys.py
migrations/: add_video_counts.sql
scripts/: auto_annotation_combo_eval.py  auto_annotation_eval.py  combo_config.yaml  compare_proposals.py  eval_config.yaml  merge_detections.py  merge_fl_pj.py  migrate_registry.py  remote_view.py  run_dedup.py  run_detect.py  run_detect_forklift.py  run_detect_forklift_youtu_vl.py  run_filter.py  test_dedup.py  test_filter.py
search/: search_index.json
settings/: default.yaml
swarm_configs/: cluster.yaml  master.yaml  standalone.yaml  worker.yaml
video_miner_async/: README.md  pipeline.yaml  pyproject.toml
video_miner_async/config/: default.yaml  search_only.yaml
video_miner_async/docs/: ASYNC_PIPELINE_IMPLEMENTATION_PLAN.md  CODE_WALKTHROUGH.md  door_classes.txt  yt_search.txt  yt_search_all.txt
video_miner_async/query_files/v1/: city_walking.txt  delivery_pov.txt  direct_doors.txt  real_estate.txt
video_miner_async/tests/: test_downloader.py  test_filter.py  test_pipeline.py
video_miner_async/video_miner_async/: __init__.py  cli.py  config.py  config_loader.py  constants.py  pipeline.py  registry.py  search.py
video_miner_async/video_miner_async/async_pipeline/: __init__.py  base_worker.py  messages.py  metrics.py  orchestrator.py
video_miner_async/video_miner_async/async_pipeline/workers/: __init__.py  dedup.py  download.py  extract.py  filter.py
video_miner_async/video_miner_async/models/: __init__.py  base.py  detector_models.py  dinov3_model.py  siglip_model.py
video_miner_async/video_miner_async/modules/: __init__.py  deduplicator.py  detector.py  downloader.py  frame_extractor.py  frame_filter.py
video_miner_async/video_miner_async/utils/: io.py  validators.py
(+304 files in other folders)
