[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "detection-metrics"
version = "0.1.0"
description = "Unified object detection evaluation metrics toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Pavan"}
]
keywords = ["object-detection", "evaluation", "metrics", "coco", "yolo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "omegaconf>=2.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "pycocotools>=2.0",
    "loguru>=0.7",
    "rich>=13.0",
    "seaborn>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
inference = [
    "torch>=2.0",
    "rfdetr",
    "thop",
]

[project.scripts]
detection-metrics = "detection_metrics.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["detection_metrics*"]

[tool.setuptools.package-data]
"detection_metrics.configs" = ["*.yaml"]
